# trading-systems

./: .clang-format  .gitignore  1XejnIsmSmK3o5yLJkpiUg_2402656ae54246e880715f135341f5f7_20200317.csv  20200317.csv  CMakeLists.txt  csv_parser.cpp  csv_reader.cpp  csv_reader.h  main.cpp  merkel_main.cpp  merkel_main.h  order_book.cpp  order_book.h  order_book_entry.cpp  order_book_entry.h  ring_locations.csv  stats.cpp  wallet.cpp  wallet.h
